<resources>
    <string name="app_name">calculator</string>
    <string name="c">C</string>
    <string name="_0">0</string>
    <string name="_6">6</string>
    <string name="minus">−</string>
    <string name="_5">5</string>
    <string name="_4">4</string>
    <string name="umnogit">×</string>
    <string name="_9">9</string>
    <string name="_8">8</string>
    <string name="_7">7</string>
    <string name="razdelit">÷</string>
    <string name="skobkapravo">)</string>
    <string name="skobkalevo">(</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="plus">+</string>
    <string name="percent">%</string>
    <string name="nol">0</string>
    <string name="tochka">.</string>
    <string name="ravno">=</string>
    <string name="settings">Настройки</string>
    <string name="dark_theme">Тёмная тема</string>

</resources>